--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 <h1>Altorrelieve Reina de la Noche</h1>
 <p>
-    Texto previo
+    El Relieve de la Reina de la Noche, o Relieve Burney, es una placa de terracota en alto relieve de la antigua Mesopotamia (aprox. 1800-1750 a.C.), 
+	que representa a una diosa alada con patas de ave sobre leones y flanqueada por búhos. Conservado en el Museo Británico, la figura se asocia con Ishtar, 
+	Ereshkigal o Lilith, destacando por su iconografía mítica. 
 </p>
 <x3d width='800px' height='800px'>
 <scene>
@@ -20,7 +22,7 @@
 </scene>
 </x3d>
 <p>
-    Texto final
+    Este modelo 3D ha sido creado para la práctica del tema 5 del módulo 2 por Maria Fornes Lopez
 </p>
   </body>
 </html>
